confs/transmission/transmission_app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: transmission
    labels:
spec:
    replicas: 1
    selector:
        matchLabels:
            app: transmission
    template:
        metadata:
            name: transmission
            labels:
                app: transmission
        spec:
          containers:
            - name: transmission-container
              image: ghcr.io/linuxserver/transmission
              ports:
              - containerPort: 9091
                protocol: TCP
              - containerPort: 51413
                protocol: TCP
              - containerPort: 51413
                protocol: UDP
              volumeMounts:
              - mountPath: /downloads
                name: transmission-pvc
              - mountPath: /config
                name: transmission-pvc
              - mountPath: /watch
                name: transmission-pvc
          volumes:
            - name: transmission-pvc
              hostPath:
                path: /mnt/flesh/transmission
                type: DirectoryOrCreate
