confs/transmission/transmission_guardian.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: guardian-transmission
    labels:
spec:
    replicas: 1
    selector:
        matchLabels:
            app: guardian-transmission
    template:
        metadata:
            name: guardian-transmission
            labels:
                app: guardian-transmission
        spec:
          containers:
            - name: transmission-container
              image: ghcr.io/linuxserver/transmission
              ports:
              - containerPort: 9091
                protocol: TCP
              - containerPort: 51413
                protocol: TCP
              - containerPort: 51413
                protocol: UDP
              volumeMounts:
              - mountPath: /downloads
                name: transmission-pvc
              - mountPath: /config
                name: transmission-pvc
              - mountPath: /watch
                name: transmission-pvc
          volumes:
            - name: transmission-pvc
              hostPath:
                path: /mnt/disk/transmission/guardian
                type: DirectoryOrCreate
