confs/transmission/transmission_service.yaml
kind: Service
apiVersion: v1
metadata:
    name: transmission-service
    labels:
      app: transmission-service
spec:
    # type: NodePort
    selector:
        app: transmission
    ports:
    - protocol: TCP
      name: web-interface
      port: 9091
      # nodePort: 90
    - protocol: TCP
      name: torrent-tcp
      port: 51413
      # nodePort: 51413
    - protocol: UDP
      name: torrents-udp
      port: 51413
      # nodePort: 51413
