confs/transmission/transmission_Ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: transmission-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  ingressClassName: nginx
  rules:
  - host: transmission.atweek.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 9091
  # tls:
  # - hosts:
  #    - transmission.atweek.fun
  #   secretName: ssl-cert-production
